--- a/auth-routing/src/app/components/login/login.component.html
+++ b/auth-routing/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
     <input class="form-control" type="password" name="password" #password />
   </div>
 
-  <a class="btn btn-primary" (click)="login(username.value, password.value)"
+  <button class="btn btn-primary" (click)="login(username.value, password.value)"
     >Submit</a
   >
 </form>
